# rag-metadata-extractor

./: .gitignore  README.md  pyproject.toml  test_import.py
src/rag_metadata_extractor/: extractor.py  taxonomy.py
src/rag_metadata_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: smoke_test.py
