[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-metadata-extractor"
version = "0.0.1"
description = "LLM-powered metadata extraction + taxonomy builder for RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "langchain>=0.2.0",
]

[project.optional-dependencies]
gemini = [
  "langchain-google-genai>=1.0.0",
]
openai = [
  "langchain-openai>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
